[gd_scene load_steps=4 format=2]

[ext_resource path="res://Misc/LevelBrightnessModifier/LevelBrightnessModifier.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "BlackOut"
length = 0.3
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ 0.75 ],
"method": "update_brightness"
}, {
"args": [ 0.5 ],
"method": "update_brightness"
}, {
"args": [ 0.25 ],
"method": "update_brightness"
}, {
"args": [ 0.0 ],
"method": "update_brightness"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ 0.25 ],
"method": "update_brightness"
}, {
"args": [ 0.5 ],
"method": "update_brightness"
}, {
"args": [ 0.75 ],
"method": "update_brightness"
}, {
"args": [ 1.0 ],
"method": "update_brightness"
} ]
}

[node name="LevelBrightnessModifier" type="Node"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BlackOut = SubResource( 1 )
anims/Brightening = SubResource( 2 )

[connection signal="timeout" from="DurationTimer" to="." method="_on_RevertTimer_timeout"]
